refactor:product register brlPrice/return usd-eur
