# backend/src/products/DTO/createProductDTO.ts
@@ -2,5 +2,5 @@ export interface CreateProductDTO {
   title: string;
   description: string;
   category: string;
-  price: number;
+  brlPrice: number;
 }
