# backend/src/products/DTO/updateProductDTO.ts
@@ -3,5 +3,5 @@ export interface UpdateProductDTO {
   title?: string;
   description?: string;
   category?: string;
-  price?: number;
+  brlPrice?: number;
 }
